--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+<meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="lib/google-code-prettify/run_prettify.js?lang=css"></script>
+<script src="lib/google-code-prettify/prettify.js?lang=css"></script>
+<script src="js/main.js"></script>
+<link rel="stylesheet" type="text/css" href="css/example.css" />
+<link rel="stylesheet" type="text/css" href="css/3d-corner-ribbons.css" />
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>3D Corner Ribbons Using Pure CSS by marketmesuite</title>
+    <title>3D Corner Ribbons Using Pure CSS</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>3D Corner Ribbons Using Pure CSS</h1>
-        <h2>3d Corner Ribbons</h2>
+        <h2>Ribbons for Pricing Page Perfection</h2>
         <a href="https://github.com/marketmesuite/3D-CORNER-RIBBONS" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
