--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+<link rel="shortcut icon" href="http://marketmesuite.com/mms/tmpl/assets/img/favicon.png?v=2"/>
     <title>3D Corner Ribbons Using Pure CSS</title>
   </head>
 
