fix for issues with button builder

--- a/index.html
+++ b/index.html
@@ -552,74 +552,73 @@
 
 <div id="ribbon-builder" class="example-block user-control">
 
-	<!-- START RIBBON -->
-	<div class="ribbon ribbon-red">
-		<div class="banner">
-			<div class="text">30 Day Free Trial</div>
-		</div>
+<!-- START RIBBON -->
+<div class="ribbon ribbon-red">
+	<div class="banner">
+		<div class="text">30 Day Free Trial</div>
 	</div>
-	<!-- END RIBBON -->
+</div>
+<!-- END RIBBON -->
 
-	<div class="headline">Headline</div>
-	<div class="tagline">Tagline</div>
-	<br /><br />
+<div class="headline">Headline</div>
+<div class="tagline">Tagline</div>
+<br /><br />
 
-	<h5>Choose Color Scheme:</h5>
-	<div class="color-block" data-element-name="ribbonColor" data-color="yellow">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="orange">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="red">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="green">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="blue-light">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="blue">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="blue-mms">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="purple">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="pink">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
-	<div class="color-block" data-element-name="ribbonColor" data-color="black">
-		<div class="color-1"></div>
-		<div class="color-2"></div>
-	</div>
+<h5>Choose Color Scheme:</h5>
+<div class="color-block" data-element-name="ribbonColor" data-color="yellow">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block" data-element-name="ribbonColor" data-color="orange">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block active" data-element-name="ribbonColor" data-color="red">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block" data-element-name="ribbonColor" data-color="green">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block" data-element-name="ribbonColor" data-color="blue-light">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block" data-element-name="ribbonColor" data-color="blue">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block" data-element-name="ribbonColor" data-color="blue-mms">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block" data-element-name="ribbonColor" data-color="purple">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block" data-element-name="ribbonColor" data-color="pink">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
+<div class="color-block" data-element-name="ribbonColor" data-color="black">
+	<div class="color-1"></div>
+	<div class="color-2"></div>
+</div>
 
-	<h5>Choose Ribbon Size:</h5>
-	<div class="size-block small" data-size="small"><span>Small</span></div>
-	<div class="size-block default active" data-size=""><span>Default</span></div>
-	<div class="size-block large" data-size="large"><span>Large</span></div>
+<h5>Choose Ribbon Size:</h5>
+<div class="size-block small" data-size="small"><span>Small</span></div>
+<div class="size-block default active" data-size=""><span>Default</span></div>
+<div class="size-block large" data-size="large"><span>Large</span></div>
 
-	<h5>Change Ribbon Text:</h5>
-	<input type="text" class="banner-text-block" data-element-name="ribbonText" value="30 Day Free Trial" />
+<h5>Change Ribbon Text:</h5>
+<input type="text" class="banner-text-block" data-element-name="ribbonText" value="30 Day Free Trial" />
 
 </div>
 <br /><br />
 
 <pre>
-<code id="ribbon-builder-code" class="prettyprint linenums lang-html">
-</code>
+<code id="ribbon-builder-code" class="prettyprint linenums lang-html"></code>
 </pre>
 
 
